--- a/css/style.css
+++ b/css/style.css
@@ -13,19 +13,23 @@ body {
   }
   
   header {
+    width: 100%;
+    height: 100vh;
+    background-color: #B4D0E7;
   }
   
   nav {
     min-height: 70px;
-    border-bottom: 1px solid;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
+    background-color: white;
+    padding: 10px
   }
   
   main {
-    margin-top: 70px;
+   
   }
   
   footer {
@@ -47,32 +51,40 @@ body {
   h5 {
     font-size: 16px;
   }
-  
+  li {
+    display: inline-block;
+    margin: 10px
+  }
+
+  a {
+    text-decoration:none;
+    color: black;
+    padding: 5px;
+  }
   /************************************************
   * Classi layout
   ************************************************/
+  
+  
   .container-large {
-    max-width: 1367px;
+    max-width: 1200px;
     width: 100%;
     margin: auto;
+    
   }
   
   .container {
-    max-width: 1010px;
+    max-width: 900px;
     width: 100%;
     margin: auto;
   }
   
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  [class*="col_"] {
+  /* [class*="col_"] {
+    float: left;
+  } */
+  .float {
     float: left;
   }
-  
   .col_1_9 {
     width: calc(100% / 9);
   }
@@ -97,10 +109,10 @@ body {
     width: calc(100% / 9 * 6);
   }
   
-  .box {
+  /* .box {
     height: 100px;
     border: 1px solid;
-  }
+  } */
   
   /************************************************
   * Classi Utilities
@@ -109,4 +121,24 @@ body {
     content: "";
     display: table;
     clear: both;
+  }
+
+  
+
+   /************************************************
+  * Classi Generiche
+  ************************************************/
+  
+  
+  .nav-header-left, .nav-header-right {
+    width: calc(100% / 2 );
+  }
+  .nav-header-left img {
+    height: 21.6px;
+  }
+  .nav-header-left li {
+    vertical-align: top;
+  }
+  .nav-header-right {
+    text-align: right;
   }
