--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: #B4D0E7;
+    margin-bottom: 250px;
   }
   
   nav {
@@ -25,7 +26,8 @@ body {
     top: 0;
     left: 0;
     background-color: white;
-    padding: 10px
+    padding: 10px;
+    z-index: 99;
   }
   
   main {
@@ -36,7 +38,7 @@ body {
   }
   
   h1 {
-    font-size: 77px;
+    font-size: 70px;
   }
   
   h2 {
@@ -49,7 +51,10 @@ body {
   
   h4,
   h5 {
-    font-size: 16px;
+    font-size: 20px;
+  }
+  p {
+    font-size: 17px;
   }
   li {
     display: inline-block;
@@ -59,7 +64,11 @@ body {
   a {
     text-decoration:none;
     color: black;
-    padding: 5px;
+    padding: 5px 15px;
+    display: inline-block;
+  }
+  hr {
+    width: 10px;;
   }
   /************************************************
   * Classi layout
@@ -70,7 +79,6 @@ body {
     max-width: 1200px;
     width: 100%;
     margin: auto;
-    
   }
   
   .container {
@@ -109,11 +117,6 @@ body {
     width: calc(100% / 9 * 6);
   }
   
-  /* .box {
-    height: 100px;
-    border: 1px solid;
-  } */
-  
   /************************************************
   * Classi Utilities
   ************************************************/
@@ -122,13 +125,16 @@ body {
     display: table;
     clear: both;
   }
+  .link-blu {
+    background-color: #0061FF;
+    color: white;
+  }
 
   
 
    /************************************************
   * Classi Generiche
   ************************************************/
-  
   
   .nav-header-left, .nav-header-right {
     width: calc(100% / 2 );
@@ -142,3 +148,38 @@ body {
   .nav-header-right {
     text-align: right;
   }
+
+
+  .header-section {
+    margin-top: 70px;
+    position:relative;
+    top: 130px;
+  }
+  .header-section-col-one, 
+  .header-section-col-two{
+    margin-top: 40px;
+  }
+  .header-section-col-one a {
+    margin-top: 30px;
+  } 
+  .header-section-col-one p:last-of-type{
+    margin-top: 10px;
+  } 
+  .header-section-col-one .fas {
+    margin-top: 50px;
+  }
+  .fas {
+    font-size: 60px
+  }
+  .coltwo-img {
+    width: 800px;
+  }
+
+  .container h2 {
+    margin-bottom: 40px;
+  }
+
+  .main-form {
+    margin-bottom: 30px;
+  }
+ 
