--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 /************************************************
 * Selettori TAG
 ************************************************/
-body {
+  body {
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
   }
@@ -19,7 +19,7 @@ body {
     margin-bottom: 250px;
   }
   
-  nav {
+    nav {
     min-height: 70px;
     position: fixed;
     width: 100%;
@@ -42,7 +42,7 @@ body {
   }
   
   h2 {
-    font-size: 40px;
+    font-size: 39px;
   }
   
   h3 {
@@ -82,7 +82,7 @@ body {
   }
   
   .container {
-    max-width: 900px;
+    max-width: 1000px;
     width: 100%;
     margin: auto;
   }
@@ -175,11 +175,36 @@ body {
     width: 800px;
   }
 
-  .container h2 {
+  .main-container h2 {
+    
     margin-bottom: 40px;
+    
   }
 
   .main-form {
+    
     margin-bottom: 30px;
   }
  
+
+.uno-a {
+  margin-right:40px;
+}
+.due-a {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+.tre-a {
+  margin-left: 40px;
+}
+.uno-a, .due-a, .tre-a {
+  border: 1px solid black;
+ 
+}
+
+.uno-ab {
+  border-bottom: 1px solid black;
+  padding:10px;
+  text-align: center ;
+
+}
