--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@
   
 
    /************************************************
-  * Classi Generiche
+  * INIZIO HEADER
   ************************************************/
   
   .nav-header-left, .nav-header-right {
@@ -175,15 +175,18 @@
   .coltwo-img {
     width: 800px;
   }
+  /************************************************
+  * FINE HEADER
+  ************************************************/
+   /************************************************
+  * INIZIO MAIN
+  ************************************************/
+
 
   .main-container h2 {
-    
     margin-bottom: 40px;
-    
   }
-
   .main-form {
-    
     margin-bottom: 30px;
   }
  
@@ -198,7 +201,7 @@
 .tre-a {
   margin-left: 40px;
 }
-.uno-a,.tre-a {
+.uno-a, .due-a, .tre-a {
   border: 1px solid black;
 
 }
@@ -209,7 +212,7 @@
   margin-bottom: 20px;
 
 }
-.due {
+.due .tre, .quattro, .cinque {
   padding-left: 30px;
 }
 .tre h3,
@@ -226,7 +229,12 @@ font-size: 16px;
 .link-uno, .due p, hr, h4 {
   margin-bottom: 20px
 }
+
 .link-due {
   text-decoration: underline;
   color: #0061FF;
+}
+
+.link-uno, hr, h4{
+  margin-left: 30px;
 }
