--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@
   .link-blu {
     background-color: #0061FF;
     color: white;
+    padding: 10px 30px;
   }
 
   
@@ -181,60 +182,127 @@
    /************************************************
   * INIZIO MAIN
   ************************************************/
-
-
+  
   .main-container h2 {
     margin-bottom: 40px;
   }
+  
   .main-form {
     margin-bottom: 30px;
   }
- 
+  
+  
+  .uno-a {
+    margin-right:40px;
+  }
+  .due-a {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+  .tre-a {
+    margin-left: 40px;
+  }
+  .uno-a, .due-a, .tre-a {
+    border: 1px solid black;
+    min-height: 900px;
+    height: 100%;
+    
+  }
+  .uno {
+    border-bottom: 1px solid black;
+    padding:10px;
+    text-align: center ;
+    margin-bottom: 20px;
+    
+  }
+  .due .tre, .quattro, .cinque {
+    padding-left: 30px;
+  }
+  .tre h3,
+  .tre h5,
+  .tre p {
+    margin-bottom: 15px
+  }
+  .fa-pencil-alt, .fa-check, .fa-user-plus {
+    font-size: 16px;
+  }
+  .fa-check {
+    color:#0061FF
+  }
+  .link-uno, .due p, hr, h4 {
+    margin-bottom: 20px
+  }
+  
+  .link-due {
+    text-decoration: underline;
+    color: #0061FF;
+  }
+  
+  .link-uno, hr, .due h4{
+    margin-left: 30px;
+  }
+  
+  .main-section-one, .main-section-two, .main-section-three {
+    margin-bottom: 200px
+  }
+  .main-section-two {
+    border: 1px solid;
+  }
+  .uno-two {
+    border-bottom: 1px solid black;
+    padding:10px;
+    text-align: center ;
+  }
+/* SEZIONE CONTATTA */
+  .main-contact {
+    padding: 30px;
+    position: relative;
+  }
+  .main-contact h3 {
+    margin-bottom: 15px;
+  }
+  .main-contact h4 {
+    margin-bottom: 30px;
+  }
+  .link-contact{
+    position: absolute;
+    top:30px;
+    right: 30px;
+  }
+  .main-section-three-a {
+    border:1px solid;
+  }
+/* SEZIONE TROVA PARTNER */
 
-.uno-a {
-  margin-right:40px;
+.three-a img {
+  width: 500px;
+  height: 500px;
+  object-fit:cover;
+  object-position: left;
 }
-.due-a {
-  margin-right: 20px;
-  margin-left: 20px;
+.three-b {
+  padding-top: 30px ;
 }
-.tre-a {
-  margin-left: 40px;
+.three-b h3 {
+  margin-bottom: 30px;
 }
-.uno-a, .due-a, .tre-a {
-  border: 1px solid black;
-
-}
-.uno {
-  border-bottom: 1px solid black;
-  padding:10px;
-  text-align: center ;
+.three-b p {
   margin-bottom: 20px;
+}
+.link-partner {
+  border: 1px solid black;
+  padding: 7px 20px;
+}
+/* SEZIONE OPERAZIONI DROPBOX */
 
+.operazione {
+  padding: 10px;
 }
-.due .tre, .quattro, .cinque {
-  padding-left: 30px;
+.operazione img {
+  height: 250px;
+  width: 300px;
+  object-fit: contain;
 }
-.tre h3,
-.tre h5,
-.tre p {
-  margin-bottom: 15px
-}
-.fa-pencil-alt, .fa-check {
-font-size: 16px;
-}
-.fa-check {
-  color:#0061FF
-}
-.link-uno, .due p, hr, h4 {
-  margin-bottom: 20px
-}
-
-.link-due {
-  text-decoration: underline;
-  color: #0061FF;
-}
-
-.link-uno, hr, h4{
-  margin-left: 30px;
+.operazione h3 {
+  margin-bottom: 20px;
 }
