modified sezione domande frequenti

--- a/css/style.css
+++ b/css/style.css
@@ -320,10 +320,7 @@
   margin-bottom: 20px;
 }
 /* SEZIONE PARTNER*/
-.main-section-six {
-  
-  height: calc(30vw);
-}
+
 .main-section-six > div {
   
   min-height: 200px;
@@ -410,18 +407,37 @@
   margin-left: 230px
 }
 /* SEZIONE DOMANDE FREQUENTI */
-.main-section-eight-a h3 {
+.main-section-eight h3 {
   margin-bottom: 50px;
 }
-.fa-chevron-down {
+.list-a {
+  border-bottom: 1px solid grey;
+  position: relative;
+  padding-right: 60px;
+}
+.list-a h6 {
+  font-weight: bold;
+  padding: 20px 0;
+}
+.list-a-icon {
   font-size: 20px;
-  margin-left: 400px;
+  position: absolute;
+  right: 20px;
+  transform: rotateZ(0deg);
+  transition: transform 0.3s;
 }
-.main-section-eight-a, .main-section-eight-ab {
-  border-bottom: 1px solid black;
+.list-content {
+  margin-bottom: 20px;
+  height: 0px;
+  overflow: hidden;
+  transition: height 0.3s;
 }
-.main-section-eight-ab {
-  padding: 30px 0;
+.list-a:focus .list-content { 
+  height: 80px;
+  overflow: auto;
+}
+.list-a:focus .list-a-icon {
+  transform: rotateZ(180deg);
 }
 /* FINE MAIN */
 /* INIZIO FOOTER */
