--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@
   
   hr {
     width: 50px;
+    color: #d5d5d8;
   }
  
   /************************************************
@@ -219,13 +220,14 @@
     margin-left: 40px;
   }
   .uno-a, .due-a, .tre-a {
-    border: 1px solid black;
+    border: 1px solid #d5d5d8;
     min-height: 900px;
     height: 100%;
     
   }
   .uno {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #d5d5d8
+    ;
     padding:10px;
     text-align: center ;
     margin-bottom: 20px;
@@ -258,15 +260,15 @@
     margin-left: 30px;
   }
   
+  /* SEZIONE CONTATTA */
   .main-section-two {
-    border: 1px solid;
+    border: 1px solid #d5d5d8;
   }
   .uno-two {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #d5d5d8;
     padding:10px;
     text-align: center ;
   }
-/* SEZIONE CONTATTA */
   .main-contact {
     padding: 30px;
     position: relative;
@@ -282,10 +284,7 @@
     top:30px;
     right: 30px;
   }
-  .main-section-three-a {
-    border:1px solid;
-  }
-/* SEZIONE TROVA PARTNER */
+  /* SEZIONE TROVA PARTNER */
 
 .three-a img {
   width: 500px;
@@ -321,22 +320,20 @@
 }
 /* SEZIONE PARTNER*/
 
-.main-section-six > div {
-  
+/* .main-section-six > div {
   min-height: 200px;
-  border: 1px solid;
-}
+} */
 .main-section-six> div .square {
   float: left;
   width: 50%;
   height: calc(30vw / 2);
-  border: 1px solid;
 }
 .six-a, .six-c {
   width: 30%;
 }
 .six-b {
   width: 40%;
+  min-height: 460px;
   height: 100%;
   overflow: auto;
   background-color: #f5f5f5;
@@ -344,8 +341,6 @@
 }
 .square {
   position: relative;
-  
-
 }
 .square img {
   width: 100px;
@@ -356,7 +351,6 @@
   transform: translate(-50%, -50%);
   filter: invert(100%);
 }
-
 .green {
   background-color: #a2d39b;
 }
@@ -380,7 +374,6 @@
 }
 .yellow { 
   background-color: #ffd830 ;
-
 }
 .six-b-one img {
   width: 200px;
